package org.web.identity.model;

import jakarta.persistence.*;
import lombok.*;
import org.hibernate.annotations.CreationTimestamp;
import org.web.common.enums.VerificationArtifactStatus;
import org.web.common.enums.VerificationArtifactType;

import java.time.LocalDateTime;

@Entity
@Table(name = "verification_artifacts")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class VerificationArtifact {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "verification_session_id", nullable = false)
    private VerificationSession verificationSession;

    @Enumerated(EnumType.STRING)
    @Column(name = "artifact_type", nullable = false, length = 30)
    private VerificationArtifactType artifactType;

    @Enumerated(EnumType.STRING)
    @Column(name = "artifact_status", nullable = false, length = 30)
    @Builder.Default
    private VerificationArtifactStatus artifactStatus = VerificationArtifactStatus.UPLOADED;

    @Column(name = "storage_key", nullable = false, length = 500)
    private String storageKey;

    @Column(name = "original_file_name", length = 255)
    private String originalFileName;

    @Column(name = "mime_type", length = 100)
    private String mimeType;

    @Column(name = "file_size")
    private Long fileSize;

    @Column(name = "checksum", length = 128)
    private String checksum;

    @CreationTimestamp
    @Column(name = "uploaded_at", nullable = false)
    private LocalDateTime uploadedAt;
}
