erDiagram
    USERS {
        bigint id PK
        string email
        string kyc_status
        string trust_level
    }

    USER_IDENTITIES {
        bigint id PK
        bigint user_id FK
        string document_type
        string identity_number UK
        string full_name
        date date_of_birth
        string gender
        string nationality
        string place_of_origin
        string place_of_residence
        date issued_date
        string issued_place
        date expiry_date
        string identity_verification_status
        boolean ocr_extracted
        boolean manual_verified
    }

    VERIFICATION_SESSIONS {
        bigint id PK
        bigint user_id FK
        string status
        string verification_type
        datetime started_at
        datetime submitted_at
        datetime completed_at
        string failure_reason
        string review_note
    }

    VERIFICATION_ARTIFACTS {
        bigint id PK
        bigint verification_session_id FK
        string artifact_type
        string artifact_status
        string storage_key
        string original_file_name
        string mime_type
        bigint file_size
        string checksum
    }

    VERIFICATION_RESULTS {
        bigint id PK
        bigint verification_session_id FK
        string ocr_provider
        double ocr_confidence
        string decision_source
        boolean document_valid
        boolean document_tampered
        string extracted_full_name
        string extracted_identity_number
        text raw_ocr_json
    }

    FACE_VERIFICATION_RESULTS {
        bigint id PK
        bigint verification_session_id FK
        double face_match_score
        boolean face_match_passed
        double liveness_score
        boolean liveness_passed
        boolean spoof_detected
        boolean multiple_faces_detected
        double face_quality_score
    }

    RISK_ASSESSMENTS {
        bigint id PK
        bigint verification_session_id FK
        double risk_score
        string risk_level
        boolean ip_risk_flag
        boolean blacklist_hit
        boolean manual_review_required
        string reason
    }

    VERIFICATION_REVIEWS {
        bigint id PK
        bigint verification_session_id FK
        bigint reviewer_id
        string review_action
        string note
        datetime reviewed_at
    }

    USERS ||--|| USER_IDENTITIES : "verified identity"
    USERS ||--o{ VERIFICATION_SESSIONS : "starts"

    VERIFICATION_SESSIONS ||--o{ VERIFICATION_ARTIFACTS : "uploads"
    VERIFICATION_SESSIONS ||--|| VERIFICATION_RESULTS : "ocr result"
    VERIFICATION_SESSIONS ||--|| FACE_VERIFICATION_RESULTS : "face result"
    VERIFICATION_SESSIONS ||--|| RISK_ASSESSMENTS : "risk result"
    VERIFICATION_SESSIONS ||--o{ VERIFICATION_REVIEWS : "reviews"